// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeStatus renders for status down 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(PulseDot))
      className="icon-mock"
      color="down"
      size={6}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="caption"
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders for status healthy 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(PulseDot))
      className="icon-mock"
      color="healthy"
      size={6}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="caption"
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders for status restarting 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(SpinnerLoader))
      classes={
        Object {
          "spinner": "spinner-mock",
        }
      }
      size={10}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="caption"
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders for status syncing 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(SpinnerLoader))
      classes={
        Object {
          "spinner": "spinner-mock",
        }
      }
      size={10}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="caption"
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders sync progress in percent 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  justify="flex-end"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(SpinnerLoader))
      classes={
        Object {
          "spinner": "spinner-mock",
        }
      }
      size={10}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="caption"
    >
      78%
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
